# rust-bridge

./: .dockerignore  CLAUDE.md  Makefile  README.md  compose.yaml
.claude/agents/: code-reviewer.md  coder.md  tester.md
.claude/commands/: analyze-pr.md  commit.md  create-pr.md  review-current-branch.md  tdd.md
.claude/prompts/: comprehensive-code-review.md
.github/: pull_request_template.md
.github/workflows/: claude-auto-review.yaml  claude.yaml
application/: Cargo.toml  bacon.toml
application/api/: Cargo.toml  bacon.toml
application/api/src/: handlers.rs  main.rs  models.rs
application/api/src/handlers/: graphql.rs
application/api_schema/: Cargo.toml
application/api_schema/src/: lib.rs  schema.rs
application/api_schema/src/queries/: user.rs
application/api_test/: Cargo.toml  build.rs
application/api_test/src/: lib.rs  main.rs
application/api_test/src/graphql/queries/: countries.graphql  fetch_user.graphql
application/api_test/src/test_helpers/: graphql.rs
application/api_test/src/test_helpers/graphql/: schema.json
application/api_test/src/test_helpers/graphql/cynic_queries/: fetch_user.rs
application/api_test/src/test_helpers/graphql/queries/: fetch_user.graphql
application/api_test/tests/: db_integration_test.rs  graphql_api.rs  learning.rs  rest_api_healthcheck.rs
application/api_test/tests/learning/: graphql_api_test.rs  mailhog_tests.rs  rest_api_test.rs
application/api_test/tests/learning/gql_api_tests/: simple.rs  structured.rs  with_graphql_client.rs
application/mailer/: Cargo.toml
application/mailer/src/: config.rs  lib.rs  message.rs  value_object.rs
application/mailer/src/message/: message_id.rs
application/repositories/: Cargo.toml
application/repositories/src/: lib.rs  user.rs
application/repositories/src/db/: models.rs  pool.rs
application/repositories/src/mock/: user.rs
application/schema/: Cargo.toml  user.graphql
application/schema/src/: lib.rs
containers/api/: Dockerfile
containers/api-test/: Dockerfile
containers/db/: Dockerfile
containers/db/init/: 01_create_tables.sql  02_insert_test_data.sql
