[package]
name = "api_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cynic = { version = "3.12", features = ["http-reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
api_schema = { path = "../api_schema" }
cynic-codegen = "3.12"

[dev-dependencies]