[package]
name = "api_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cynic = { version = "3.12", features = ["http-reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
mime = "0.3"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
mailparse = "0.16"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
api_schema = { path = "../api_schema" }
cynic-codegen = "3.12"

[dev-dependencies]