[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "tokio1-native-tls"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
html-escape = "0.2"
async-trait = "0.1"
dotenvy = "0.15"